<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Onboarding">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="@string/onboarding_title"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/onboarding_description"
        android:textColor="@color/textColor"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <!--    Customize profile section 1    -->
    <ImageView
        android:id="@+id/onboardingBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/onboarding_buttons" />


    <ImageView
        android:id="@+id/onboardingBoxIcon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingBox1"
        app:layout_constraintEnd_toEndOf="@+id/onboardingBox1"
        app:layout_constraintStart_toStartOf="@+id/onboardingBox1"
        app:layout_constraintTop_toTopOf="@+id/onboardingBox1"
        app:srcCompat="@drawable/onboarding_inside_buttons" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingBoxIcon1"
        app:layout_constraintEnd_toEndOf="@+id/onboardingBoxIcon1"
        app:layout_constraintStart_toStartOf="@+id/onboardingBoxIcon1"
        app:layout_constraintTop_toTopOf="@+id/onboardingBoxIcon1"
        app:srcCompat="@drawable/ic_person" />





    <!--    Customize profile section 2    -->


    <ImageView
        android:id="@+id/onboardingBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/onboardingBox1"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/onboarding_buttons" />





    <!--    Customize profile section 3    -->
    <ImageView
        android:id="@+id/onboardingBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/onboardingBox3"
        app:layout_constraintTop_toBottomOf="@+id/onboardingBox4"
        app:srcCompat="@drawable/onboarding_buttons" />




    <!--    Customize profile section 4    -->
    <ImageView
        android:id="@+id/onboardingBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingBox1"
        app:srcCompat="@drawable/onboarding_buttons" />






    <!-- Skip/Next Buttons -->
    <Button
        android:id="@+id/btn_skip"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/btntxt_skip"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/btntxt_next"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_skip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Profile"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingBox1"
        app:layout_constraintEnd_toEndOf="@+id/onboardingBox1"
        app:layout_constraintStart_toStartOf="@+id/onboardingBox1" />


</androidx.constraintlayout.widget.ConstraintLayout>